fix(IconButton): fix close button invisible in light mode

--- a/src/components/IconButton/IconButton.module.css
+++ b/src/components/IconButton/IconButton.module.css
@@ -26,7 +26,7 @@
 }
 
 .secondary {
-    color: var(--background);
+    color: var(--custom-black);
     background-color: transparent;
     border: none;
 }
